Fix some quality flaws